load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "another_tuple_test_bench",
    srcs = ["another_tuple_test_bench.cpp"],
    deps = [
        "//:tuple",
        "@boost//libs/core",
    ],
)

cc_test(
    name = "io_test",
    srcs = ["io_test.cpp"],
    deps = [
        "//:tuple",
        "@boost//libs/core",
    ],
)

cc_test(
    name = "std_tuple_element",
    srcs = ["std_tuple_element.cpp"],
    deps = [
        "//:tuple",
        "@boost//libs/core",
        "@boost//libs/type_traits",
        "@boost//libs/config",
    ],
)

cc_test(
    name = "std_tuple_size",
    srcs = ["std_tuple_size.cpp"],
    deps = [
        "//:tuple",
        "@boost//libs/core",
        "@boost//libs/config",
    ],
)

cc_test(
    name = "structured_bindings",
    srcs = ["structured_bindings.cpp"],
    deps = [
        "//:tuple",
        "@boost//libs/core",
        "@boost//libs/config",
    ],
)

cc_test(
    name = "tuple_test_bench",
    srcs = ["tuple_test_bench.cpp"],
    deps = [
        "//:tuple",
        "@boost//libs/core",
        "@boost//libs/type_traits",
    ],
)
